# uhc-tic

./: .dockerignore  .gitattributes  .gitignore  32GB_DROPLET_GUIDE.md  BCBS_MI_HANDLER_GUIDE.md  Dockerfile  NPPES_BACKFILL_GUIDE.md  PRODUCTION_ETL_GUIDE.md  README.md  README_DEPLOYMENT.md  README_DEPLOY_TO_VM.md  REPOSITORY_CLEANUP_GUIDE.md  SCRIPTS_GUIDE.md  SMART_PAYER_INTEGRATION_GUIDE.md  bcbs_fl_pipeline_test.py  bcbs_fl_pipeline_test_enhanced.py  bcbs_fl_production_hybrid.py  bcbs_fl_quicktest.py  bcbs_fl_size_analyzer.py  complete_pipeline_fix.py  config.yaml  debug_detailed.py  debug_parser.py  debug_parsing_pipeline.py  debug_pipeline_step_by_step.py  deploy-local-windows.bat  deploy-local.ps1  deploy-local.sh  deploy.sh  deploy_to_vm.sh  deploy_to_vm_simple.sh  docker-compose.local.yml  docker-compose.yml  et --soft 7b65119  explain_provider_groups.py  inspect_nppes.ipynb  inspect_parq.ipynb  inspect_uhc_output.ipynb  memory_monitor.py  monitor_resources.sh  (+45 more)
examples/: simple_run.sh
notebooks/: s3_inspect.ipynb
optim_health/: REFACTORING_GUIDE.md  app.py  notebook.ipynb  prep_data.py  prod_df.parquet  wc_codes copy.ipynb  wc_codes.ipynb
payer_structure_analysis/: summary_20250724_112312.txt  summary_20250726_173640.txt  summary_20250726_173823.txt  summary_20250726_174022.txt  summary_20250726_174401.txt  summary_20250726_205425.txt  summary_20250726_230241.txt  summary_20250726_231206.txt  summary_20250729_095013.txt  summary_20250729_095154.txt  summary_20250729_095526.txt  summary_20250802_101944.txt  summary_20250802_110139.txt  (+14 more)
src/: README_rates.md  (+8 more)
(+120 files in other folders)
